# dalted

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  Rocket.toml  app.js  package-lock.json  package.json
.github/: FUNDING.yml
.github/workflows/: msrv.yml  pretty.yml
src/: main.rs
src/image_processing/: matrices.rs  mod.rs  pipe_transform.rs  svg.rs
src/image_proocessing/: matrices.rs  mod.rs  pipe_transform.rs
src/routes/: errors.rs  get.rs  mod.rs  post.rs  static_files.rs
static/: about.html  index.html  javascript_license.html  main.css  main.js
static/css/: error.css  style.css
templates/: im-a-teapot.html  main.html.tera  not-found.html.tera
templates/errors/: not-found.html.tera
ui/: app.js  index.html  style.css
ui/css/: style.css
