[package]
name = "dalted"
version = "1.1.0"
authors = ["carrascomj <carrascomurielj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1.0"
actix-http = "2"
actix-web = "3"
actix-files = "0.3"
serde_derive = "1.0"
serde = "1.0"
image = "0.23.7"
futures = "0.3.5"
imageproc ="0.21"
base64 = "0.12.0"
rayon="1.3.0"
