[package]
name = "dalted"
version = "1.2.2"
authors = ["carrascomj <carrascomurielj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1.6.1"
actix-http = "2.2.1"
actix-web = "3.3.2"
actix-files = "0.5.0"
serde_derive = "1.0.123"
serde = "1.0.123"
image = "0.23.14"
imageproc ="0.22"
base64 = "0.13.0"
rayon="1.5.0"
ultraviolet="0.7.5"
resvg="0.13.1"
usvg="0.13.1"
tiny-skia="0.4.2"
